--- a/src/client/app/layout/views/signup.html
+++ b/src/client/app/layout/views/signup.html
@@ -10,6 +10,7 @@
              <div>
                  <div class="widget-body no-padding">
                      <smart-registration-form></smart-registration-form>
+                 </div>
              </div>
          </div>
      </div>
