--- a/src/client/styles/custom.less
+++ b/src/client/styles/custom.less
@@ -310,7 +310,7 @@ body{
 	background:none;
 	span.box-header{
 		.menu-background;
-		padding:5px 31px;
+		padding:5px 31px 5px 30px;
 		color:rgb(50, 118, 177);
 		font-weight:bold;
 		font-size:15px;
